--- a/index.html
+++ b/index.html
@@ -97,11 +97,26 @@
         <div class="row me-row content-ct speaker" id="partneri">
           <h2 class="row-title">Partneři turnaje</h2>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/ultimo_logo.png" class="speaker-img">
-            <h3>Ultimo.cz</h3>
+            <img src="img/kostka_logo.png" class="speaker-img">
+            <h3>Kostka stav</h3>
             <p></p>
             <ul class="speaker-social">
-              <li><a href="https://www.ultimo.cz" target="_blank"><span class="ti-link"></span></a></li>
+              <li><a href="https://www.kostkastav.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div><div class="col-md-4 col-sm-6 feature">
+            <img src="img/rockdesign_logo.png" class="speaker-img">
+            <h3>Rockdesign</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.rockdesign.studio" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/bighub_logo.png" class="speaker-img">
+            <h3>BigHub</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.bighub.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
@@ -113,14 +128,22 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/kostka_logo.png" class="speaker-img">
-            <h3>Kostka stav</h3>
+            <img src="img/movit_logo.png" class="speaker-img">
+            <h3>Movit Energy</h3>
             <p></p>
             <ul class="speaker-social">
-              <li><a href="https://www.kostkastav.cz" target="_blank"><span class="ti-link"></span></a></li>
+              <li><a href="https://www.movitenergy.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
+            <img src="img/praha_logo.png" class="speaker-img">
+            <h3>Hlavní město Praha</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.praha.eu" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-4 feature">
             <img src="img/tectra_logo.png" class="speaker-img">
             <h3>Tectra</h3>
             <p></p>
@@ -128,12 +151,20 @@
               <li><a href="https://www.tectra.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
-          <div class="col-md-4 col-sm-6 feature">
-            <img src="img/bighub_logo.png" class="speaker-img">
-            <h3>BigHub</h3>
+          <div class="col-md-3 col-sm-4 feature">
+            <img src="img/ultimo_logo.png" class="speaker-img">
+            <h3>Ultimo.cz</h3>
             <p></p>
             <ul class="speaker-social">
-              <li><a href="https://www.bighub.cz" target="_blank"><span class="ti-link"></span></a></li>
+              <li><a href="https://www.ultimo.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-4 feature">
+            <img src="img/cald_logo.png" class="speaker-img">
+            <h3>Česká asociace létajícího disku</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
@@ -153,19 +184,75 @@
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/cald_logo.png" class="speaker-img">
-            <h3>Česká asociace létajícího disku</h3>
+            <img src="img/dronarstvi_logo.png" class="speaker-img">
+            <h3>Dronařství</h3>
             <p></p>
             <ul class="speaker-social">
-              <li><a href="https://www.cald.cz" target="_blank"><span class="ti-link"></span></a></li>
+              <li><a href="https://www.dronarstvi.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
-            <img src="img/praha_logo.png" class="speaker-img">
-            <h3>Hlavní město Praha</h3>
+            <img src="img/slusny_logo.png" class="speaker-img">
+            <h3>SLUSNY</h3>
             <p></p>
             <ul class="speaker-social">
-              <li><a href="https://www.praha.eu" target="_blank"><span class="ti-link"></span></a></li>
+              <li><a href="https://www.slusny.net" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/cvikov_logo.png" class="speaker-img">
+            <h3>Pivovar Cvikov</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.pivovarcvikov.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/ngss_logo.png" class="speaker-img">
+            <h3>NGSS</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.ngss.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/mazel_logo.png" class="speaker-img">
+            <h3>OZ Mazel</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.ngss.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/beberry_logo.png" class="speaker-img">
+            <h3>Be berry</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <!-- <li><a href="https://www.ngss.cz" target="_blank"><span class="ti-link"></span></a></li> -->
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/ddmp9_logo.png" class="speaker-img">
+            <h3>DDM Praha 9</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.ddmpraha9.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/grizly_logo.png" class="speaker-img">
+            <h3>Grizly</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.grizly.cz" target="_blank"><span class="ti-link"></span></a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 col-sm-6 feature">
+            <img src="img/ramirent_logo.png" class="speaker-img">
+            <h3>Ramirent</h3>
+            <p></p>
+            <ul class="speaker-social">
+              <li><a href="https://www.ramirent.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-6 feature">
@@ -176,14 +263,6 @@
               <li><a href="https://www.praha-bechovice.cz" target="_blank"><span class="ti-link"></span></a></li>
             </ul>
           </div>
-          <!-- <div class="col-md-4 col-sm-6 feature">
-            <img src="img/tectra_logo.png" class="speaker-img">
-            <h3>Tectra</h3>
-            <p></p>
-            <ul class="speaker-social">
-              <li><a href="https://www.tectra.cz" target="_blank"><span class="ti-link"></span></a></li>
-            </ul>
-          </div> -->
         </div>
       </div>
       <!-- End: Partneri -->
@@ -218,25 +297,38 @@
               <div role="tabpanel" class="tab-pane fade in active" id="day-0">
                 <ul class="list-group">
                   <li class="list-group-item">Tréninkový den</li>
-                  <li class="list-group-item">Slavnostní zahájení</li>
-                  <li class="list-group-item">Hráčský meeting</li>
                 </ul>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="day-1">
                 <ul class="list-group">
                   <li class="list-group-item">1. kolo turnaje</li>
+                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie FPO</li>
+                  <li class="list-group-item">9:00 - 13:30 Výhoz kategorie MPO</li>
+                  <li class="list-group-item">13:30 - 14:30 Výhoz kategorie MJ18</li>
                 </ul>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="day-2">
                 <ul class="list-group">
                   <li class="list-group-item">2. kolo turnaje</li>
+                  <li class="list-group-item">8:00 - 12:30 Výhoz kategorie MPO</li>
+                  <li class="list-group-item">12:30 Výhoz vedoucí skupiny MPO</li>
+                  <li class="list-group-item">12:30 - 13:30 Výhoz kategorie MJ18</li>
+                  <li class="list-group-item">13:30 Výhoz vedoucí skupiny MJ18</li>
+                  <li class="list-group-item">13:30 - 14:30 Výhoz kategorie FPO</li>
+                  <li class="list-group-item">14:30 Výhoz vedoucí skupiny FPO</li>
                 </ul>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="day-3">
                 <ul class="list-group">
                   <li class="list-group-item">Finálové kolo turnaje</li>
-                  <li class="list-group-item">Vyhlášení</li>
-                  <li class="list-group-item">Slavnostní zakočení</li>
+                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie MJ18</li>
+                  <li class="list-group-item">9:00 Výhoz vedoucí skupiny MJ18</li>
+                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie FPO</li>
+                  <li class="list-group-item">10:00 Výhoz vedoucí skupiny FPO</li>
+                  <li class="list-group-item">10:00 - 14:30 Výhoz kategorie MPO</li>
+                  <li class="list-group-item">14:30 Vyhlášení kategorií FPO a MJ18</li>
+                  <li class="list-group-item">14:30 Výhoz vedoucí skupiny MPO</li>
+                  <li class="list-group-item">18:00 Vyhlášení kategorie MPO</li>
                 </ul>
               </div>
             </div>
