Info pro diváky

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <span class="ti-calendar"></span>
             <h3>Datum a místo konání</h3>
             <p>15. - 17. 9. 2023</p>
-            <p>Praha-Běchovice</p>
+            <p>DiscGolfPark Praha-Běchovice</p>
             <p><a href="https://mapy.cz/s/javezekuru" target="_blank">MAPA</a></p>
           </div>
           <div class="col-md-4 feature">
@@ -84,13 +84,35 @@
             <p>PDGA B Tier</p>
           </div>
           <div class="col-md-4 feature">
-            <span class="ti-map-alt"></span>
-            <h3>Místo</h3>
-            <p>DiscGolfPark Praha-Běchovice</p>
+            <span class="ti-bar-chart"></span>
+            <h3>Živé výsledky</h3>
+            <p><a class="btn btn-primary" href="https://www.pdga.com/tour/live?TournID=72393" target="_blank">PDGA Live</a></p>
+            <p><a class="btn btn-primary" href="https://idiscgolf.cz/live-scoring/1145" target="_blank">iDiscgolf.cz Live</a></p>
           </div>
         </div>
       </div>
       <!-- End: Zakladni informace -->
+
+      <!-- Start: Pro divaky -->
+      <div class="container">
+        <div class="row me-row content-ct speaker" id="Pro divaky">
+          <h2 class="row-title">Pro diváky</h2>
+          <div class="col-12">
+            <p>Přijďte se podívat na českou discgolfovou špičku na nejdůležitějším turnaji sezony!</p>
+            <p>Vstupné je zdarma</p>
+            <p>Na místě se můžete těšit na nabídku jídel a nápojů a řadu doprovodných soutěží pro diváky, kde můžete vyhrát ceny od našich partnerů. </p>
+            <p>Pokud se chystáte navštívit discgolfový turnaj poprvé, přečtěte si základní pravidla dobrého diváka <a href="https://hdgl.fun/jak-byt-divakem-discgolfu/" target="_blank">ZDE</a></p>
+            <p>
+              Hrát se bude každý hrací den přibliženě od 8 do 17 hodin, pro orientační časy jednotlivých kategorií zkontrolujte harmonogram <a href="#program">níže</a>. 
+              Finálové kolo turnaje se odehraje v neděli 17.9., kdy přibližně v 9h bude vyhazovat vedoucí skupina kategorie FPO (ženy), 
+              v 10h vedoucí skupina kategorie MJ18 (junioři do 18 let), ve 14h pak proběhne slavnostní vyhlášení těchto kategorií a hned poté vyrazí 14:30 vedoucí skupina kategorie MPO (muži). 
+              Vyhlášení této kategorie proběhne ihned po dohrání poslední jamky, přibližně kolem 18h. 
+              Časy jsou orientační, přesný rozpis skupin bude zveřejněn vždy večer před každým kolem a bude poté dostupný na stránkách turnaje na webu <a href="https://www.pdga.com/tour/event/72393" target="_blank">PDGA</a> a <a href="https://idiscgolf.cz/turnaje/1145" target="_blank">idiscgolf.cz</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- End: Pro divaky -->
 
       <!-- Start: Partneri -->
       <div class="container">
@@ -302,9 +324,9 @@
               <div role="tabpanel" class="tab-pane fade" id="day-1">
                 <ul class="list-group">
                   <li class="list-group-item">1. kolo turnaje</li>
-                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie FPO</li>
-                  <li class="list-group-item">9:00 - 13:30 Výhoz kategorie MPO</li>
-                  <li class="list-group-item">13:30 - 14:30 Výhoz kategorie MJ18</li>
+                  <li class="list-group-item">8:00 - 9:00 Výhoz kategorie MJ18</li>
+                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie FPO</li>
+                  <li class="list-group-item">10:00 - 14:30 Výhoz kategorie MPO</li>
                 </ul>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="day-2">
@@ -323,8 +345,8 @@
                   <li class="list-group-item">Finálové kolo turnaje</li>
                   <li class="list-group-item">8:00 - 9:00 Výhoz kategorie FPO</li>
                   <li class="list-group-item">9:00 Výhoz vedoucí skupiny FPO</li>
-                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie </li>
-                  <li class="list-group-item">10:00 Výhoz vedoucí skupiny </li>
+                  <li class="list-group-item">9:00 - 10:00 Výhoz kategorie MJ18</li>
+                  <li class="list-group-item">10:00 Výhoz vedoucí skupiny MJ18</li>
                   <li class="list-group-item">10:00 - 14:30 Výhoz kategorie MPO</li>
                   <li class="list-group-item">14:30 Vyhlášení kategorií FPO a MJ18</li>
                   <li class="list-group-item">14:30 Výhoz vedoucí skupiny MPO</li>
