--- a/idiscgolf.html
+++ b/idiscgolf.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 
 <style>
     .h-mcr {
@@ -65,6 +66,14 @@
     .partner-img {
         max-width: 60%;
     }
+
+    .mcr-bg-lightblue {
+        background-color: #0054BA;
+    }
+
+    .mcr-bg-darkblue {
+        background-color: #001748;
+    }
 </style>
 
 <div class="cont-gradient container">
@@ -129,9 +138,30 @@
 </div>
 
 <div class="cont-content container">
-    <p>
-        Detailní caddy book bude zveřejněn 2 týdny před turnajem.
-    </p>
+    <h4>Caddy book</h4>
+
+    <iframe width="100%" height="640" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/collection/7Jsw0?logo=1&card=1&info=0&fs=1&vr=1&sd=1&initload=0&thumbs=1"></iframe>
+
+    <div class="row">
+        <div class="col text-center">
+            <a class="btn btn-lg btn-primary mt-3 mcr-bg-lightblue" href="https://kuula.co/share/collection/7Jsw0?logo=1&card=1&info=0&fs=1&vr=1&sd=1&initload=0&thumbs=1" target="_blank">
+                <i class="fa-vr-cardboard fas"></i>
+                Virtuální caddy book
+            </a>
+        </div>
+        <div class="col text-center">
+            <a class="btn btn-lg btn-primary mt-3 mcr-bg-lightblue" href="" target="_blank">
+                <i class="fa-book fas"></i>
+                Caddy book MPO+MJ18
+            </a>
+        </div>
+        <div class="col text-center">
+            <a class="btn btn-lg btn-primary mt-3 mcr-bg-lightblue" href="" target="_blank">
+                <i class="fa-book fas"></i>
+                Caddy book FPO
+            </a>
+        </div>
+    </div>
 </div>
 
 <div class="cont-heading container">
@@ -149,9 +179,9 @@
         <tr><td></td><td></td></tr>
         
         <tr><th colspan="2">pátek 15.9.</th></tr>
-        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie FPO</td></tr>
-        <tr><td>9:00 - 13:30</td><td>Výhoz kategorie MPO</td></tr>
-        <tr><td>13:30 - 14:30</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td>9:00 - 10:00</td><td>Výhoz kategorie FPO</td></tr>
+        <tr><td>10:00 - 14:30</td><td>Výhoz kategorie MPO</td></tr>
         <tr><td></td><td></td></tr>
 
         <tr><th colspan="2">sobota 16.9.</th></tr>
@@ -164,10 +194,10 @@
         <tr><td></td><td></td></tr>
         
         <tr><th colspan="2">neděle 17.9.</th></tr>
-        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie MJ18</td></tr>
-        <tr><td>9:00</td><td>Výhoz vedoucí skupiny MJ18</td></tr>
-        <tr><td>9:00 - 10:00</td><td>Výhoz kategorie FPO</td></tr>
-        <tr><td>10:00</td><td>Výhoz vedoucí skupiny FPO</td></tr>
+        <tr><td>8:00 - 9:00</td><td>Výhoz kategorie FPO</td></tr>
+        <tr><td>9:00</td><td>Výhoz vedoucí skupiny FPO</td></tr>
+        <tr><td>9:00 - 10:00</td><td>Výhoz kategorie MJ18</td></tr>
+        <tr><td>10:00</td><td>Výhoz vedoucí skupiny MJ18</td></tr>
         <tr><td>10:00 - 14:30</td><td>Výhoz kategorie MPO</td></tr>
         <tr><td>14:30</td><td>Výhoz vedoucí skupiny MPO</td></tr>
         </tbody>
@@ -178,7 +208,14 @@
         Hřiště se nachází v bezprostřední blízkosti železniční zastávky Běchovice-Střed, cca 15 minut jízdy z centra Prahy.
     </p>
     <p>
-        Pro parkování je možné využít několik parkovišť v okolí s dostatečnou kapacitou.
+        Pro parkování je možné využít několik parkovišť v okolí s dostatečnou kapacitou. 
+        Pouze v sobotu ráno může být lehký problém s parkováním z důvodu konání běžeckého závodu. Případné alternativy dáme vědět, případně využijte hromadnou dopravu.
+    </p>
+
+    <h4>Stravování</h4>
+    <p>
+        Během celého turnaje se můžete těšit na foodtruck v turnajovém centru, o pitný režim se postaráme pivem Cvikov a nabídkou nealkoholických nápojů. 
+        Poukázky na občerstvení budou součástí hráčského balíčku. 
     </p>
 
     <h4>Možnosti ubytování</h4>
